# mod_settings

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  mod_settings.code-workspace  readme.md  requirements.md  shields.json  workspace.code-workspace
.github/workflows/: build.yaml  release.yaml
cmake/: FindRED4ext.SDK.cmake
game_dir/r6/scripts/: mod_settings_uninstall.bat
game_dir/r6/scripts/mod_settings/: mod_settings.module.reds  mod_settings.packed.reds
include/: ModSettings.hpp  ModSettingsVariable.hpp
include/ModSettings/: ModSettings.hpp  Utils.hpp  Variable.hpp
src/red4ext/: ActionNameEx.cpp  ActionNameEx.hpp  Addresses.hpp  CMakeLists.txt  IModRuntimeSettingsVar.cpp  IModRuntimeSettingsVar.hpp  INIReader.h  IRuntimeVariable.cpp  IRuntimeVariable.hpp  Main.cpp  ModConfigVar.cpp  ModConfigVar.hpp  ModRuntimeSetting.hpp  ModRuntimeSettingsVar.cpp  ModRuntimeSettingsVar.hpp  ModSettings.cpp  ModSettings.hpp  ModSettingsVariable.cpp  ModSettingsVariable.hpp  RuntimeVariable.cpp  RuntimeVariable.hpp  ScriptData.hpp  Utils.cpp  Utils.hpp  Variable.cpp  Variable.hpp  mod_settings.sln  mod_settings.vcxproj  stdafx.hpp
src/red4ext/Hooks/: ApplyOverrides.cpp  ApplyOverrides.hpp  ReleaseScriptData.cpp
src/red4ext/ScriptDefinitions/: ScriptDefinitions.hpp  ScriptHost.hpp  ScriptProperty.hpp
src/red4ext/Scripting/: Common.hpp
src/redscript/: CMakeLists.txt  Module.reds.in
src/redscript/mod_settings/: MenuScenario_ModSettings.reds  ModSettings.reds  ModSettingsMainGameController.reds  ModSettingsNotificationListener.reds  _SettingsSelectorControllers.reds  _deathMenu.reds  _pauseMenu.reds  _singleplayerMenu.reds
src/redscript/mod_settings/Extensions/: ActionName.reds  MenuScenario_PauseMenu.reds  MenuScenario_SingleplayerMenu.reds  PauseMenuGameController.reds  SettingsSelectorControllers.reds  SingleplayerMenuGameController.reds
src/redscript/mod_settings/SelectorControllers/: ModStngsSelectorControllerBool.reds  ModStngsSelectorControllerFloat.reds  ModStngsSelectorControllerInt.reds  ModStngsSelectorControllerKeyBinding.reds  ModStngsSelectorControllerListInt.reds
src/wolvenkit/: ModSettings.cpmodproj  custom_refs.txt  install_log.xml  layout.xml
src/wolvenkit/.projectFiles/: fileTreeState.json
src/wolvenkit/packed/archive/pc/mod/: ModSettings.archive
src/wolvenkit/packed/mods/ModSettings/archives/: ModSettings.archive
src/wolvenkit/source/archive/base/gameplay/gui/fullscreen/: menu.inkmenu  menu_old.inkmenu
src/wolvenkit/source/archive/base/gameplay/gui/fullscreen/main_menu/: pregame_menu.inkmenu
src/wolvenkit/source/archive/base/gameplay/gui/fullscreen/settings/: mod_settings_main.inkwidget  mod_settings_main_bk.inkwidget
src/wolvenkit/source/archive/base/localization/en-us/onscreens/: mod_settings.json
tools/: ModStngs.1sc  build.bat  install_ltbf.bat
